Remove Period Home Page

--- a/_pgbackup/index_1484588044.html
+++ b/_pgbackup/index_1484588044.html
@@ -44,7 +44,7 @@
         
         <span id="circle" class="icon-circle"></span> -->
                 <h1 class="title homeHeader">
-           Crayon box on your device.</h1>
+           Crayon box on your device..</h1>
                 <p class="regular homeSubHeader">
             Channel Hue helps you find colors to advance your creative work flow.</p>
                 <div class="homeAppStore">
