Removal of Resources .html extension

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="container footer">
                 <div class="bottomSpace">
                     <a href="mailto:hello@channelhue.com" class="title footerLink">Contact</a>
-                    <a href="resources.html" class="title footerLink">Resources</a>
+                    <a href="/resources" class="title footerLink">Resources</a>
                     <!-- <a href="#" class="title" style="margin: 0 8px; text-decoration: none;">Terms</a> -->
                     <!--<a href="http://www.iubenda.com/en" class="title" style="margin: 0 8px; text-decoration: none;">Privacy</a> -->
                 </div>
