--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                 <nav class="navbar navbar-default navbar-fixed-top menuBar">
                     <div class="container">
                         <div class="navbar-header">
-                            <a class="navbar-brand navSpace" href="index.html"><span id="logo-top" class="icon-logo"></span></a>
+                            <a class="navbar-brand navSpace" href="/"><span id="logo-top" class="icon-logo"></span></a>
                             <ul class="nav navbar-nav navbar-right navBar">
                                 <li class="navBlock">
-                                    <a href="blog.html" class="title linkStyle">Blog</a>
+                                    <a href="/blog" class="title linkStyle">Blog</a>
                                 </li>
                                 <li class="navBlock">
-                                    <a href="shop.html" class="title linkStyle">Shop</a>
+                                    <a href="/shop" class="title linkStyle">Shop</a>
                                 </li>
                             </ul>
                         </div>
