--- a/resources.html
+++ b/resources.html
@@ -23,13 +23,13 @@
                 <nav class="navbar navbar-default navbar-fixed-top menuBar">
                     <div class="container">
                         <div class="navbar-header">
-                            <a class="navbar-brand navSpace" href="index.html"><span id="logo-top" class="icon-logo"></span></a>
+                            <a class="navbar-brand navSpace" href="/"><span id="logo-top" class="icon-logo"></span></a>
                             <ul class="nav navbar-nav navbar-right navBar">
                                 <li class="navBlock">
-                                    <a href="blog.html" class="title linkStyle">Blog</a>
+                                    <a href="/blog" class="title linkStyle">Blog</a>
                                 </li>
                                 <li class="navBlock">
-                                    <a href="shop.html" class="title linkStyle">Shop</a>
+                                    <a href="/shop" class="title linkStyle">Shop</a>
                                 </li>
                             </ul>
                         </div>
@@ -80,7 +80,7 @@
             <div class="container footer">
                 <div class="bottomSpace">
                     <a href="mailto:hello@channelhue.com" class="title footerLink">Contact</a>
-                    <a href="resources.html" class="title footerLink">Resources</a>
+                    <a href="/resources" class="title footerLink">Resources</a>
                     <!-- <a href="#" class="title" style="margin: 0 8px; text-decoration: none;">Terms</a> -->
                     <!--<a href="http://www.iubenda.com/en" class="title" style="margin: 0 8px; text-decoration: none;">Privacy</a> -->
                 </div>
