--- a/app-beta-one.html
+++ b/app-beta-one.html
@@ -44,7 +44,7 @@
     Channel Hue App: Beta 1.0 is Here</a></h1>
                 <span class="post-date regular">1 Jan 2016</span>
                 <div class="tweet-button">
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-text="Channel Hue App: Beta 1.0 is Here" data-size="large" data-url="https://project018.github.io/ChannelHueWebsite/app-beta-one.html" data-lang="en" data-show-count="false" tyle="background: #14C1EF;">Tweet</a>
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-text="Channel Hue App: Beta 1.0 is Here" data-size="large" data-url="https://www.channelhue.com/app-beta-one" data-lang="en" data-show-count="false">Tweet</a>
                     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
                 <img src="iPhone6_Hue_Full.png" class="img-responsive blogImg" />
