Update Twitter Button

--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,7 @@
     Channel Hue App: Beta 1.0 is Here</a></h1>
                 <span class="post-date regular">1 Jan 2016</span>
                 <div class="tweet-button">
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-text="Channel Hue App: Beta 1.0 is Here" data-size="large" data-url="https://project018.github.io/ChannelHueWebsite/app-beta-one.html" data-lang="en" data-show-count="false">Tweet</a>
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-text="Channel Hue App: Beta 1.0 is Here" data-size="large" data-url="https://www.channelhue.com/app-beta-one" data-lang="en" data-show-count="false">Tweet</a>
                     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
                 <img src="iPhone6_Hue_Full.png" class="img-responsive blogImg" />
@@ -57,7 +57,7 @@
     Happy New Year!</a></h1>
                 <span class="post-date regular">1 Jan 2016</span>
                 <div class="tweet-button">
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-text="Happy New Year!" data-size="large" data-url="https://project018.github.io/ChannelHueWebsite/happy-new-year-2017.html" data-lang="en" data-show-count="false">Tweet</a>
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-text="Happy New Year!" data-size="large" data-url="https://www.channelhue.com/happy-new-year-2017" data-lang="en" data-show-count="false">Tweet</a>
                     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
                 <img src="happy_new_year_channel_hue_2017.png" class="img-responsive blogImg" />
@@ -70,7 +70,7 @@
     Welcome to Channel Hue</a></h1>
                 <span class="post-date regular">23 Dec 2016</span>
                 <div class="tweet-button" style="padding: 1% 0 3% 0;">
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-text="Welcome to Channel Hue" data-size="large" data-url="https://project018.github.io/ChannelHueWebsite/welcome.html" data-lang="en" data-show-count="false">Tweet</a>
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-text="Welcome to Channel Hue" data-size="large" data-url="https://www.channelhue.com/welcome" data-lang="en" data-show-count="false">Tweet</a>
                     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
                 <p class="regular">Hello all, and welcome to the official Channel Hue blog. Here you will find announcements, discussions, and more for Channel Hue. Another way to stay updated with Channel Hue is to sign up for the newsletter on the home page. We are excited to have you here. Enjoy your stay.</p>
