--- a/welcome.html
+++ b/welcome.html
@@ -44,7 +44,7 @@
     Welcome to Channel Hue</a></h1>
                 <span class="post-date regular">23 Dec 2016</span>
                 <div class="tweet-button">
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-text="Welcome to Channel Hue" data-size="large" data-url="https://project018.github.io/ChannelHueWebsite/welcome.html" data-lang="en" data-show-count="false" tyle="background: #14C1EF;">Tweet</a>
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-text="Welcome to Channel Hue" data-size="large" data-url="https://www.channelhue.com/welcome" data-lang="en" data-show-count="false">Tweet</a>
                     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
                 <p class="regular">Hello all, and welcome to the official Channel Hue blog. Here you will find announcements, discussions, and more for Channel Hue. Another way to stay updated is to sign up for the newsletter on the home page. We are excited to have you here. Enjoy your stay.</p>
