--- a/happy-new-year-2017.html
+++ b/happy-new-year-2017.html
@@ -44,7 +44,7 @@
     Happy New Year!</a></h1>
                 <span class="post-date regular">1 Jan 2016</span>
                 <div class="tweet-button">
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-text="Happy New Year!" data-size="large" data-url="https://www.channelhue.com/happy-new-year-2017" data-lang="en" data-show-count="false" tyle="background: #14C1EF;">Tweet</a>
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-text="Happy New Year!" data-size="large" data-url="https://www.channelhue.com/happy-new-year-2017" data-lang="en" data-show-count="false">Tweet</a>
                     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
                 <img src="happy_new_year_channel_hue_2017.png" class="img-responsive" />
