--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <title>Channel Hue</title>
+        <link rel="shortcut icon" href="channel_hue_favi.png">
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
         <!-- Custom styles for this template -->
