--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p class="regular homeSubHeader">
             Channel Hue helps you find colors to advance your creative work flow.</p>
                 <div class="homeAppStore">
-                    <a href="#">
+                    <a href="https://itunes.apple.com/us/app/channel-hue/id1197999486?ls=1&mt=8" target="_blank">
                         <img src="Download_on_the_App_Store_Badge_US-UK_250x40.svg" class="homeAppImage" />
                     </a>
                 </div>
