Update Page with font size

--- a/app-beta-one.html
+++ b/app-beta-one.html
@@ -49,9 +49,9 @@
                     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
                 <img src="iPhone6_Hue_Full.png" class="img-responsive blogImg" />
-                 <p class="regular">The Channel Hue app is <a href="https://itunes.apple.com/us/app/channel-hue/id1197999486?ls=1&mt=8" target="_blank">now available</a> for free in the iTunes App Store. Here at Channel Hue, we firmly believe in the phrase, "Build And Share," and this app is our first offering. Enjoy.</p>
-                <p class="regular">Beta 1.0 - Here's what you need to know:</p>
-                <ul class="regular">
+                 <p class="regularBlog">The Channel Hue app is <a href="https://itunes.apple.com/us/app/channel-hue/id1197999486?ls=1&mt=8" target="_blank">now available</a> for free in the iTunes App Store. Here at Channel Hue, we firmly believe in the phrase, "Build And Share," and this app is our first offering. Enjoy.</p>
+                <p class="regularBlog">Beta 1.0 - Here's what you need to know:</p>
+                <ul class="regularBlog">
                     <li>The Channel Hue app is a collection of colors for users to quickly find, and use. The app is intended to assist with your creative and design needs. Consider it a digital crayon box, housing hundreds of your favorite colors.</li>
                     <li>There are plenty of colors for you to experiment with. Currently, the collection is 300+.</li>
                     <li>We will be updating the collection periodically.</li>
@@ -59,8 +59,8 @@
                     <li>Save your favorite colors on the app and share them via social media, email, and more.</li>
                     <li>Stay tuned for annoucements on the next updates for the project.</li>
                 </ul>
-                <p class="regular">We would love to hear what you think in the <a href="https://itunes.apple.com/us/app/channel-hue/id1197999486?ls=1&mt=8" target="_blank">iTunes App Store</a> and on Twitter @ChannelHue.</p>
-                <p class="regular"><a href="https://twitter.com/ChannelHue" target="_blank">@channelhue</a></p>
+                <p class="regularBlog">We would love to hear what you think in the <a href="https://itunes.apple.com/us/app/channel-hue/id1197999486?ls=1&mt=8" target="_blank">iTunes App Store</a> and on Twitter @ChannelHue.</p>
+                <p class="regularBlog"><a href="https://twitter.com/ChannelHue" target="_blank">@channelhue</a></p>
             </div>
         </div>
         <section class="section">
