Update page with font size

--- a/happy-new-year-2017.html
+++ b/happy-new-year-2017.html
@@ -49,8 +49,8 @@
                     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
                 <img src="happy_new_year_channel_hue_2017.png" class="img-responsive" />
-                <p class="regular">We interrupt your day to wish you all a safe and happy New Year!</p>
-                <p class="regular"><a href="https://twitter.com/ChannelHue" target="_blank">@channelhue</a></p>
+                <p class="regularBlog">We interrupt your day to wish you all a safe and happy New Year!</p>
+                <p class="regularBlog"><a href="https://twitter.com/ChannelHue" target="_blank">@channelhue</a></p>
             </div>
         </div>
         <section class="section">
