Update page with font size

--- a/welcome.html
+++ b/welcome.html
@@ -48,8 +48,8 @@
                     <a href="https://twitter.com/share" class="twitter-share-button" data-text="Welcome to Channel Hue" data-size="large" data-url="https://www.channelhue.com/welcome" data-lang="en" data-show-count="false">Tweet</a>
                     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
-                <p class="regular">Hello all, and welcome to the official Channel Hue blog. Here you will find announcements, discussions, and more for Channel Hue. Another way to stay updated is to sign up for the newsletter on the home page. We are excited to have you here. Enjoy your stay.</p>
-                <p class="regular"><a href="https://twitter.com/ChannelHue" target="_blank">@channelhue</a></p>
+                <p class="regularBlog">Hello all, and welcome to the official Channel Hue blog. Here you will find announcements, discussions, and more for Channel Hue. Another way to stay updated is to sign up for the newsletter on the home page. We are excited to have you here. Enjoy your stay.</p>
+                <p class="regularBlog"><a href="https://twitter.com/ChannelHue" target="_blank">@channelhue</a></p>
             </div>
         </div>
         <section class="section">
