create privacy page

--- a/index.html
+++ b/index.html
@@ -72,9 +72,14 @@
         </section>
         <section class="sectionFive">
             <div class="container footer">
+                <div class="bottomSpace">
+                    <a href="mailto:info@channelhue.com" class="title footerLink">Contact</a>
+                    <a href="/privacy" class="title" style="margin: 0 8px; text-decoration: none;">Privacy</a>
+                </div>
                 <div>
                     <p class="title">
-            &copy; 2019 Channel Hue</p>
+            &copy; 2017 Channel Hue</p>
+                    <!-- <p class="title">Built by <a href="http://www.far-left.com/" target="_blank">Farleft</a> | Credit to Shaun Thomas</p> -->
                     <a href="http://www.twitter.com/ChannelHue" target="_blank" class="socialImg">
                         <img src="twitter_logo.png">
                     </a>
