revert privacy link

--- a/privacy.html
+++ b/privacy.html
@@ -123,7 +123,7 @@
             <div class="container footer">
                 <div class="bottomSpace">
                     <a href="mailto:info@channelhue.com" class="title footerLink">Contact</a>
-                    <a href="/ChannelHue/privacy" class="title" style="margin: 0 8px; text-decoration: none;">Privacy</a>
+                    <a href="/privacy" class="title" style="margin: 0 8px; text-decoration: none;">Privacy</a>
                 </div>
                 <div>
                     <p class="title">
