--- a/privacy.html
+++ b/privacy.html
@@ -127,8 +127,7 @@
                 </div>
                 <div>
                     <p class="title">
-            &copy; 2017 Channel Hue</p>
-                    <!-- <p class="title">Built by <a href="http://www.far-left.com/" target="_blank">Farleft</a> | Credit to Shaun Thomas</p> -->
+            &copy; 2019 Channel Hue. All Rights Reserved.</p>
                     <a href="http://www.twitter.com/ChannelHue" target="_blank" class="socialImg">
                         <img src="twitter_logo.png">
                     </a>
